--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Monkeypox Virus</title>
+  <title>About Monkeypox Virus</title>
   <link rel="shortcut icon" type="image/png" href="images/R.jpg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,47 +37,31 @@
   </nav>
 </header>
 
- 
-    <!-- ======= home Section ======= -->
-    <section id="home" class="d-flex align-items-center">
-      <div class="container text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
-        <div class="row align-items-center h-100">
-                <div class="col-md-4 mx-auto text-center" style="font-size: x-large;">
-                <form class="upload">
-                  <div class="upload_body">
-                    <i class="ri-file-upload-line"></i>
-                      <p>Drag file here to upload</p>
-                  </div>
-                  <footer class="upload_footer">
-                    <label for="upload_input" class="upload_button">
-                      <p><span>or</span> choose file </p>
-                      <input type="file" id="upload_input" data-mdb-max-file-size="2M" " accept=" " onchange=" "/>
-                    </label>
-                  </footer>
-                </form>
-                <div class="btn_predict text-center text-lg-start">
-                  <div class="row align-items-center h-100">
-                    <div class="row col-md-12 mx-auto text-center" style="font-size: x-large;">
-                <button class="btn bg-secondary" type="button">Predict</button>
-                </div>
-                </div>
-                </div>
-                </div>
-          </div>
+<!-- ======= about Section ======= -->
+<section id="about" class="about">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
+        <div class="about-img">
+          <img src="images/Monkeypox.jpg" alt="">
         </div>
       </div>
-    </section><!-- End home -->
-<!-- ======= about Section ======= -->
-    <!-- <div id="about" class="about">
-      <h4 class="text-light" style="font-size:30px ;">read the research about Monkeypox <a href="https://www.mdpi.com/topics/Human_Monkeypox">here</a></h4>
-    </div> -->
+      <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+        <h3>About Monkeypox Virus</h3>
+        <p class="fst-italic">
+          Mpox (monkeypox) is a viral disease similar to smallpox. It causes fever, swollen lymph nodes, and a lesion-like rash. The lesions can appear on or near your genitals or anus and in other areas.
+       </p>
+       <h4>research about Monkeypox Virus <br> <a class="active" href="https://www.healthline.com/health/monkeypox"> here</a></h4>
+      </div>
+    </div>
+  </div>
+</section> 
 <!--=====================footer==================================-->
 <footer>
     <hr>
     <span class="text-center d-block text-secondary">Copyright © 2023. All rights reserved</span>
     <hr> 
-</footer>
- <!-- End footer -->
+</footer> <!-- End footer -->
     <!-- ======= form register Section ======= -->
     <div class="modal" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -106,7 +90,7 @@
             </div>
             <div class="form-field d-flex align-items-center">
               <span class="fas fa-key"></span>
-              <input type="text"  name="phone" id="phone" placeholder="Phone" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <input type="phone" name="phone"  placeholder="Phone">
           </div>
           <div class="form-check d-flex justify-content-center mb-5">
             <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
